tests/tooling/fixtures/native/execution/negative/foundation_alias_parser_missing_param_colon.objc3
module FoundationAliasParserMissingParamColon;

fn pick(flag BOOL, value: NSInteger) -> NSUInteger {
  return value;
}

fn main() -> i32 {
  return pick(true, 7);
}
